[tool.poetry]
name = "modele-ihu"
version = "0.1.0"
description = ""
authors = ["Thomas Brosset <thomas.brosset@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
frictionless = "^5.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
